# rust_rag_mcp

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  docker-compose.yml  rust-rag-mcp-design-roadmap.md
.cargo/: config.toml  config.toml.example
crates/rag-connectors/: Cargo.toml
crates/rag-connectors/src/: filesystem.rs  lib.rs  sharepoint.rs
crates/rag-connectors/tests/: sharepoint_mock.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: chunker.rs  embedder.rs  error.rs  indexer.rs  lib.rs  models.rs  retriever.rs  store.rs  traits.rs
crates/rag-core/tests/: integration.rs
crates/rag-extension-protocol/: Cargo.toml
crates/rag-extension-protocol/src/: lib.rs
crates/rag-mcp/: Cargo.toml
crates/rag-mcp/src/: config.rs  lib.rs  main.rs
crates/rag-server/: Cargo.toml
crates/rag-server/src/: lib.rs
crates/rag-store-pgvector/: Cargo.toml
crates/rag-store-pgvector/migrations/: 0001_initial.sql
crates/rag-store-pgvector/src/: lib.rs
crates/rag-store-pgvector/tests/: integration.rs
crates/rag-zenoh/: Cargo.toml
crates/rag-zenoh/src/: call.rs  config.rs  events.rs  lib.rs  registry.rs
crates/rag-zenoh/tests/: integration.rs
docs/: ephemeral-chat-rag-mode.md  federated-search-design.md  multimodal-indexing-design.md  parity-check-m1-m4.md  query-rewriting-and-conversation-retrieval.md  rag-parity-checking.md  understanding-rag.md  using-rag-in-larger-systems.md  vectorstore-backend-comparison.md
python/: pyproject.toml
python/examples/: docx_loader.py  pdf_loader.py
python/rag_worker_sdk/: __init__.py  config.py  protocol.py  worker.py
