[workspace]
members = [
    "crates/rag-core",
    "crates/rag-store-pgvector",
    "crates/rag-connectors",
    "crates/rag-extension-protocol",
    "crates/rag-zenoh",
    "crates/rag-mcp",
    "crates/rag-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "2"
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid        = { version = "1", features = ["v4", "serde"] }

rag-core               = { path = "crates/rag-core" }
rag-extension-protocol = { path = "crates/rag-extension-protocol" }
