[package]
name        = "rag-core"
version.workspace = true
edition.workspace = true
description = "Core RAG domain models, traits, and orchestration"
license.workspace = true

[dependencies]
tokio.workspace       = true
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
chrono.workspace      = true
tracing.workspace     = true
uuid.workspace        = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
