[package]
name        = "rag-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server exposing rag-core search, indexing, and source management (Phase 5)"
license.workspace = true

[[bin]]
name = "rag-mcp"
path = "src/main.rs"

[dependencies]
rag-core.workspace               = true
rag-extension-protocol.workspace = true
tokio.workspace                  = true
async-trait.workspace            = true
serde.workspace                  = true
serde_json.workspace             = true
anyhow.workspace                 = true
thiserror.workspace              = true
tracing.workspace                = true
tracing-subscriber.workspace     = true
# Phase 5: rmcp = { version = "0.1", features = ["server", "transport-io"] }
