[package]
name        = "rag-server"
version.workspace = true
edition.workspace = true
description = "Optional HTTP API server built on top of rag-core (Phase 7)"
license.workspace = true

[dependencies]
rag-core.workspace           = true
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
# Phase 7: axum, tower, tower-http
