[package]
name        = "rag-store-pgvector"
version.workspace = true
edition.workspace = true
description = "PostgreSQL/pgvector VectorStore implementation for rag-core"
license.workspace = true

[dependencies]
rag-core.workspace    = true
tokio.workspace       = true
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
chrono.workspace      = true
uuid.workspace        = true

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
# pgvector is used only for its text-format helper; sqlx integration is
# handled manually via ::vector casts in SQL to avoid version coupling.
pgvector = "0.4"
