[package]
name        = "rag-zenoh"
version.workspace = true
edition.workspace = true
description = "Zenoh extension bus for rag-core: out-of-process document loaders, embedders, and rerankers"
license.workspace = true

[dependencies]
rag-core.workspace               = true
rag-extension-protocol.workspace = true
tokio.workspace                  = true
async-trait.workspace            = true
serde.workspace                  = true
serde_json.workspace             = true
anyhow.workspace                 = true
thiserror.workspace              = true
tracing.workspace                = true
chrono.workspace                 = true
uuid.workspace                   = true

# Zenoh — EPL-2.0 OR Apache-2.0; we use Apache-2.0.
# Peer mode works without an external router (multicast scout or direct TCP connect).
zenoh = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
